--- a/src/main/resources/templates/approve-review.html
+++ b/src/main/resources/templates/approve-review.html
@@ -27,11 +27,11 @@
                 <td><span th:text="${review.review}"></span></td>
                 <td>
                     <a class="btn btn-primary btn-sm mb-3"
-                       th:href="@{'/admin/approveReview'(id=${review.id})}">
+                       th:href="@{'/admin/approveReview'(id=${review.id})}"
+                    onclick="if (!(confirm('Are you sure you want to activate this review?'))) return false">
                         Approve
                     </a>
                 </td>
-
             </tr>
             </tbody>
         </table>
