--- a/src/main/resources/templates/approve-seller.html
+++ b/src/main/resources/templates/approve-seller.html
@@ -27,7 +27,8 @@
                 <td><span th:text="${seller.email}"></span></td>
                 <td>
                     <a class="btn btn-primary btn-sm mb-3"
-                           th:href="@{'/admin/approveSeller'(id=${seller.userId})}">
+                           th:href="@{'/admin/approveSeller'(id=${seller.userId})}"
+                       onclick="if (!(confirm('Are you sure you want to activate this seller?'))) return false">
                             Approve
                     </a>
                 </td>
