--- a/src/main/resources/templates/approve-review.html
+++ b/src/main/resources/templates/approve-review.html
@@ -13,17 +13,42 @@
             <tbody>
             <br>
             <tr th:each="review: ${reviewList}">
-
                 <td><span th:text="${review.buyer.firstName}"></span></td>
                 <td><span th:text="${review.buyer.lastName}"></span></td>
                 <td><span th:text="${review.review}"></span></td>
                 <td>
-                    <a class="btn btn-primary btn-sm mb-3"
-                       th:href="@{'/admin/approveReview'(id=${review.id})}"
-                    onclick="if (!(confirm('Are you sure you want to activate this review?'))) return false">
-                        Approve
-                    </a>
+					<a class="btn btn-primary btn-sm mb-3"
+						data-toggle="modal" data-target="#myModal"
+						style="color: white; cursor: pointer;"
+						th:attr="data-target='#myModal'+${review.id}">
+						Approve </a>
                 </td>
+ 				<div class="modal fade" th:id="myModal+${review.id}">
+					<div class="modal-dialog modal-dialog-centered">
+						<div class="modal-content">
+			
+							<!-- Modal Header -->
+							<div class="modal-header">
+								<h4 class="modal-title">Confirmation...</h4>
+								<button type="button" class="close" data-dismiss="modal">&times;</button>
+							</div>
+			
+							<!-- Modal body -->
+							<div class="modal-body">
+								Are you sure you want to activate this review?
+							</div>
+			
+							<!-- Modal footer -->
+							<div class="modal-footer">
+								<a type="button" class="btn btn-primary"
+									th:href="@{'/admin/approveReview'(id=${review.id})}">Approve</a>
+								<button type="button" class="btn btn-secondary"
+									data-dismiss="modal">Close</button>
+							</div>
+			
+						</div>
+					</div>
+				</div>
             </tr>
             </tbody>
         </table>
