--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
 							placeholder="Password" />
 					</div>
 					<div style="clear: both; display: block; height: 10px;"></div>
-					<input type ="checkbox" name="keepMe"/> Remember Me?
+					<input type ="checkbox" name="remember-me"/> Remember Me?
 					<div style="clear: both; display: block; height: 10px;"></div>
 					<div>
 						<input type="submit" class="btn btn-primary form-control" value="Sign In" />
