update session attributes

--- a/src/main/resources/templates/address.html
+++ b/src/main/resources/templates/address.html
@@ -15,7 +15,7 @@
 
 
 
-            <form th:object="${address}" th:action="@{/buyer/addAddress}" action="#"
+            <form th:object="${address}" th:action="@{/addAddress}" action="#"
                   method="POST" enctype="multipart/form-data">
 
                 <div style="clear: both; display: block; height: 10px;"></div>
