--- a/src/main/resources/templates/approve-review.html
+++ b/src/main/resources/templates/approve-review.html
@@ -41,7 +41,7 @@
 							<!-- Modal footer -->
 							<div class="modal-footer">
 								<a type="button" class="btn btn-primary"
-									th:href="@{'/admin/approveReview'(id=${review.id})}">Approve</a>
+									th:href="@{'/approveReview'(id=${review.id})}">Approve</a>
 								<button type="button" class="btn btn-secondary"
 									data-dismiss="modal">Close</button>
 							</div>
