--- a/src/main/resources/templates/approve-seller.html
+++ b/src/main/resources/templates/approve-seller.html
@@ -42,7 +42,7 @@
 								<!-- Modal footer -->
 								<div class="modal-footer">
 									<a type="button" class="btn btn-primary"
-										th:href="@{'/admin/approveSeller'(id=${seller.userId})}">Approve</a>
+										th:href="@{'/approveSeller'(id=${seller.userId})}">Approve</a>
 									<button type="button" class="btn btn-secondary"
 										data-dismiss="modal">Close</button>
 								</div>
