--- a/src/main/resources/templates/paymentMethod.html
+++ b/src/main/resources/templates/paymentMethod.html
@@ -15,7 +15,7 @@
 
 
             <!--/*@thymesVar id="paymentMethod" type=""*/-->
-            <form th:object="${paymentMethod}" th:action="@{/buyer/addPayment}" action="#"
+            <form th:object="${paymentMethod}" th:action="@{/addPayment}" action="#"
                   method="post" enctype="multipart/form-data">
 
                 <div style="clear: both; display: block; height: 10px;"></div>
