--- a/src/main/resources/templates/productDetails.html
+++ b/src/main/resources/templates/productDetails.html
@@ -32,7 +32,7 @@
 
         <div sec:authorize="hasAuthority('ROLE_BUYER')">
             <a class="btn btn-primary btn-sm mb-3"
-               th:href="@{/buyer/addProduct}">
+               th:href="@{/addProduct}">
                 Add To Cart
             </a>
         </div>
