--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,18 +9,20 @@
 </head>
 <body>
 <div class="col" layout:fragment="main-content">
-	<input type="hidden" th:value="${tab}" id="tab"/>
-	<div class="container" sec:authorize="hasAuthority('ROLE_ADMIN')">
-		<br>
-		<ul class="nav nav-tabs nav-justified" id="adminTabs">
-		    <li class="nav-item"><a href="#approve-review" data-url="/approve-review" class="nav-link active">Approve Review</a></li>
-		    <li class="nav-item"><a href="#approve-seller" data-url="/approve-seller" class="nav-link" id="tab2">Approve Seller</a></li>
-		</ul>
-		<div class="tab-content">
-		    <div class="tab-pane container active" id="approve-review">Active panel</div>
-		    <div class="tab-pane container fade" id="approve-seller"></div>
-		</div>
-	</div>
+    <input type="hidden" th:value="${tab}" id="tab"/>
+    <div class="container" sec:authorize="hasAuthority('ROLE_ADMIN')">
+        <br>
+        <ul class="nav nav-tabs nav-justified" id="adminTabs">
+            <li class="nav-item"><a href="#approve-review" data-url="/approve-review" class="nav-link active">Approve
+                Review</a></li>
+            <li class="nav-item"><a href="#approve-seller" data-url="/approve-seller" class="nav-link" id="tab2">Approve
+                Seller</a></li>
+        </ul>
+        <div class="tab-content">
+            <div class="tab-pane container active" id="approve-review">Active panel</div>
+            <div class="tab-pane container fade" id="approve-seller"></div>
+        </div>
+    </div>
     <div class="container" sec:authorize="!hasAuthority('ROLE_ADMIN')">
         <form method="get" th:action="@{/search}" th:object="${searchMessage}" ui-jp="parsley">
             <div class="row" style="padding: 10px; padding-left: 0px">
@@ -31,46 +33,77 @@
             </div>
         </form>
 
-        <table class="table table-bordered table-striped">
+        <!--BUYER-->
+
+        <div class="row" style="margin-right: 0px;padding-right: 0px; margin-bottom: 100px"
+             sec:authorize="hasAuthority('ROLE_BUYER')">
+            <div class="card-deck col-md-3 " style="padding: 10px" th:each="product,iter: ${productList}">
+                <div class="card">
+                    <img src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg"
+                         class="card-img-top" alt="image" style="width:100%; height: 50%;">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${product.name}">Card title</h5>
+                        <p class="card-text" style="height: 48px;" th:text="${product.description}"></p>
+                        <p class="card-text" th:if="${product.quantity > 0}"><small class="text-muted">In
+                            Stock</small></p>
+                        <p class="card-text" th:if="${product.quantity <= 0}"><small class="text-muted">Out Of
+                            Stock</small></p>
+                        <span th:if="${product.quantity > 0}">
+                        <a class="btn btn-primary btn-sm mb-3"
+                           th:href="@{'/addToCart'(id=${product.id})}">
+                            Add To Cart
+                        </a>
+                    </span>
+                        <span th:if="${product.quantity <= 0}">
+                        <a class="btn btn-secondary btn-sm mb-3 disabled">
+                            Add To Cart
+                        </a>
+                    </span>
+                        <span>
+                        <a class="btn btn-outline-info btn-sm mb-3 "
+                           th:href="@{'/product/detail'(id=${product.id})}">
+                            !Details
+                        </a>
+                    </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--seller-->
+        <div sec:authorize="hasAuthority('ROLE_SELLER')">
+            <div th:if="${seller.getApproved() == false}">
+                <p>You have to wait until get the approval to sell products</p>
+            </div>
+        </div>
+
+        <div sec:authorize="hasAuthority('ROLE_SELLER')" style="padding: 10px;padding-left: 0px;">
+            <div th:if="${seller.getApproved() == true}">
+                <a class="btn btn-info btn-sm mb-3"
+                   th:href="@{/product/addProduct}">
+                    Add Product
+                </a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped" sec:authorize="hasAuthority('ROLE_SELLER')">
             <thead class="thead-dark">
             <tr>
                 <th>Product Name</th>
-                <th>Available</th>
-                <th>Add Product</th>
+                <th>Quantity</th>
+                <th>Action</th>
             </tr>
             </thead>
 
             <tbody>
             <tr th:each="product: ${productList}">
 
-                <td><a th:href="@{'/product/detail'(id=${product.id})}"> <span th:text="${product.name}"></span></a>
+                <td><a th:href="@{'/product/detail'(id=${product.id})}"> <span th:text="${product.name}">name</span></a>
                 </td>
                 <td>
-                    <span th:if="${product.getQuantity() > 0}">In stock</span>
-                    <span th:if="${product.getQuantity() <= 0}">Out of stock</span>
+                    <span th:text="${product.quantity}">Quantity</span>
                 </td>
                 <td>
-                    <div sec:authorize="hasAuthority('ROLE_BUYER')">
-
-                        <span th:if="${product.getQuantity() > 0}">
-                            <a class="btn btn-primary btn-sm mb-3"
-                               th:href="@{'/addToCart'(id=${product.id})}">
-                                Add To Cart
-                            </a>
-                        </span>
-                        <span th:if="${product.getQuantity() <= 0}">
-                            <a class="btn btn-secondary btn-sm mb-3 disabled">
-                                Add To Cart
-                            </a>
-                        </span>
-                    </div>
-                    <div sec:authorize="hasAuthority('ROLE_SELLER')">
-                        <a class="btn btn-primary btn-sm mb-3"
-                           th:href="@{/product/addProduct}">
-                            Add Product
-                        </a>
-                    </div>
-
+                    Remove, Edit
                 </td>
 
             </tr>
