--- a/src/main/resources/templates/layouts/dashboard_layout.html
+++ b/src/main/resources/templates/layouts/dashboard_layout.html
@@ -30,6 +30,7 @@
 	</div>
 	<footer th:replace="fragments/dashboard_footer :: footer"></footer>
 <script th:src="@{/js/tab.js}"></script>
+<script th:src="@{/js/number-spinner.js}"></script>
 
 </body>
 
