--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,77 +1,55 @@
 <!DOCTYPE html>
 <html layout:decorate="~{layouts/dashboard_layout}"
-      xmlns:layout="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      xmlns:th="http://www.thymeleaf.org">
+	xmlns:layout="http://www.w3.org/1999/xhtml"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Shopping Cart</title>
+<title>Shopping Cart</title>
 </head>
 <body>
-
-<div class="col" layout:fragment="main-content">
-
-
-    <div class="container">
-        <h1>Order List</h1>
-        <div th:each="order: ${orders}">
-            <div th:if="${order.getItems().size() > 0 }">
-                <table class="table table-bordered table-striped">
-                    <thead class="thead-light">
-                    <tr>
-                        <th>Product Name</th>
-                        <th>Quantity</th>
-                        <th>Price</th>
-                        <th>Seller</th>
-                        <th>Shipping Status</th>
-                        <th>Action</th>
-
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="item: ${order.items}">
-
-                        <td th:text="${item.getProduct().getName()}">name</td>
-                        <td th:text="${item.getQuantity()}">Quantity</td>
-                        <td th:text="${item.getProduct().getPrice()}">Price</td>
-                        <td th:text="${item.getProduct().getSeller().getUsername()}">Seller</td>
-                        <td th:text="${item.getShippingStatus()}">Shipping Status</td>
-                        <td>
-                    <span th:if="${item.getShippingStatus() == 'prepared' }">
-                            <a class="btn btn-danger btn-sm mb-3"
-                               th:href="@{'/removeItem'(id= ${item.getId()})}">
-                                Remove
-                            </a>
-                        </span>
-                            <span th:if="${item.getShippingStatus() != 'prepared' }">
-                            <a class="btn btn-dangerAa btn-sm mb-3 disabled"
-                               href="#">
-                                Remove
-                            </a>
-                    </span>
-                        </td>
-
-                    </tr>
-                    </tbody>
-                </table>
-                <div class="row">
-                    <div class="col-4">
-
-                        <a class="btn btn-info btn-sm mb-3">
-                            Total Price = <span th:text="${order.getTotalPrice()}"></span>
-                        </a>
-                    </div>
-                    <div class="col-15">
-                        <a class="btn btn-success btn-sm mb-3"
-                           href="#">
-                            Check Out
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
+	<div class="col" layout:fragment="main-content">
+		<div class="container">
+			<h1>Order List</h1>
+			<div th:if="${order.getItems().size() > 0 }">
+				<table class="table table-bordered table-striped">
+					<thead class="thead-dark">
+						<tr>
+							<th>Product Name</th>
+							<th>Seller</th>
+							<th>Price</th>
+							<th>Quantity</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:each="item: ${order.items}">
+							<td th:text="${item.getProduct().getName()}">name</td>
+							<td th:text="${item.getProduct().getSeller().getUsername()}">Seller</td>
+							<td th:text="${item.getProduct().getPrice()}">Price</td>
+							<td>
+								<div class="input-group number-spinner">
+									<input type="number" th:value="${item.getQuantity()}" min="1" th:max="${item.getProduct().getQuantity()}" step="1"/>
+								</div>
+							</td>
+							<td><a class="btn btn-danger btn-sm mb-3"
+									th:href="@{'/removeCartItem'(id= ${item.getId()})}"> Remove </a>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<div class="row">
+					<div class="col-4">
+						<a class="btn btn-info btn-sm mb-3"> Total Price = <span
+							th:text="${order.getTotalPrice()}"></span>
+						</a>
+					</div>
+					<div class="col-15">
+						<a class="btn btn-success btn-sm mb-3" href="#"> Check Out </a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
