--- a/src/main/resources/templates/fragments/dashboard_header.html
+++ b/src/main/resources/templates/fragments/dashboard_header.html
@@ -27,9 +27,9 @@
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Address</a></li>
 			<li><a class="dropdown-item" th:href="@{/addPayment}"
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Edit Payment Method</a></li>
-			<li><a class="dropdown-item" th:href="@{/order}"
+			<li><a class="dropdown-item" th:href="@{/orders}"
 				   sec:authorize="hasAuthority('ROLE_BUYER')">Orders</a></li>
-			<li><a class="dropdown-item" href="#"
+			<li><a class="dropdown-item" th:href="@{/orders}"
 				   sec:authorize="hasAuthority('ROLE_SELLER')">Orders</a></li>
 			<li class="dropdown-divider"></li>
 			<li><a class="dropdown-item" th:href="@{/logout}">Logout</a></li>
@@ -37,10 +37,10 @@
 	</div>
 
 	<div class="logo" sec:authorize="hasAuthority('ROLE_BUYER')">
-		<a class="navbar-brand mr-1" href="home.html" th:href="@{/home}"
+		<a class="navbar-brand mr-1" th:href="@{/cart}"
 		   style="float: right;">
 			<img th:src="@{/img/cart.png}" style="width: 30px">
-			<span>0</span>
+			<span th:text="${session.cartCount}">0</span>
 		</a>
 	</div>
 </nav>
