--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -54,7 +54,7 @@
 
                         <span th:if="${product.getQuantity() > 0}">
                             <a class="btn btn-primary btn-sm mb-3"
-                               th:href="@{'/addToCart'(id=${product.id})}">
+                               th:href="@{'/addToCart'(id=${product.id})}" id="addToCart">
                                 Add To Cart
                             </a>
                         </span>
