--- a/src/main/resources/templates/paymentMethod.html
+++ b/src/main/resources/templates/paymentMethod.html
@@ -6,9 +6,10 @@
 <head>
     <title>Address</title>
 </head>
-<body style="text-align: center">
+<body>
 <div class="col" layout:fragment="main-content">
-    <div class="row">
+    <input type="hidden" th:value="${status}" id="status"/>
+    <div class="row" style="text-align: center">
         <div class="col-md-4"></div>
         <div class="col-md-4">
             <h1>Payment</h1>
