--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,8 +36,8 @@
         <div class="dropdown">
 			<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#" id="sellerMenu" th:text="${sellerName}">Select a Seller <span class="caret"></span></a>
 			<ul class="dropdown-menu bg-dark">
-				<li th:each="product : ${productList}">
-					<a class="dropdown-item" th:href="@{'/searchBySeller'(id= ${product.getId()})}" th:text="${product.name}">
+				<li th:each="seller : ${sellerList}">
+					<a class="dropdown-item" th:href="@{'/searchBySeller'(id= ${seller.userId})}" th:text="${seller.firstName}">
 						Item I
 					</a>
 				</li>
