--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -49,13 +49,14 @@
 
         <div class="row" style="margin-right: 0px;padding-right: 0px; margin-bottom: 100px"
              sec:authorize="hasAuthority('ROLE_BUYER')">
-            <div class="card-deck col-md-3 " style="padding: 10px" th:each="product,iter: ${productList}">
-                <div class="card">
+            <div class="card-deck col-md-3 " style="padding: 10px; height: 500px" th:each="product,iter: ${productList}">
+                <div class="card" >
                     <img src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg"
                          class="card-img-top" alt="image" style="width:100%; height: 50%;">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${product.name}">Card title</h5>
                         <p class="card-text" style="height: 48px;" th:text="${product.description}"></p>
+                        <strong> $(<span th:text="${product.price}"></span>)</strong>
                         <p class="card-text" th:if="${product.quantity > 0}"><small class="text-muted">In
                             Stock</small></p>
                         <p class="card-text" th:if="${product.quantity <= 0}"><small class="text-muted">Out Of
