new checkout layout

--- a/src/main/resources/templates/fragments/dashboard_footer.html
+++ b/src/main/resources/templates/fragments/dashboard_footer.html
@@ -6,7 +6,7 @@
 <body>
 
 <footer class="sticky-footer bg-dark navbar-brand mr-1" th:fragment="footer"
-	style="position: fixed; bottom: 0; width: 100%; height: 40px; color: white;">
+	style="position: fixed; bottom: 0; width: 100%; height: 40px; color: white; margin-top: 20px">
     <div class="container my-auto">
         <div class="copyright text-center my-auto">
             <span>Copyright ©2020 Pharaohs Co. All rights reserved.</span>
