--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -11,35 +11,134 @@
 	<div class="col" layout:fragment="main-content">
 		<div class="container" style="text-align: center">
 			<h1>Checkout</h1>
-			<table class="table table-bordered table-striped">
-				<thead class="thead-dark">
-					<tr>
-						<th>Product Name</th>
-						<th>Seller</th>
-						<th>Price</th>
-						<th>Quantity</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="item: ${order.items}">
-						<td th:text="${item.getProduct().getName()}">name</td>
-						<td th:text="${item.getProduct().getSeller().getUsername()}">Seller</td>
-						<td th:text="${item.getProduct().getPrice()} + ' $'">Price</td>
-						<td th:text="${item.getQuantity()}">Quantity</td>
-					</tr>
-				</tbody>
-				<tfoot class="thead-dark">
-					<tr>
-						<td></td>
-						<td></td>
-						<th><h6 style="margin: 0">Sum</h6></th>
-						<th><h6 style="margin: 0" th:text="${order.getTotalPrice()} + ' $'"></h6></th>
-					</tr>
-				</tfoot>
-			</table>
-			<div class="row" style="align-content: center; align-items: center; display: block;">
-				<a class="btn btn-primary"
-					th:href="@{/placeOrder}"> Place Order </a>
+			<br>
+			<div class="row">
+				<div class="col-md-4 order-md-2 mb-4">
+					<h4 class="d-flex justify-content-between align-items-center mb-3">
+						<span class="text-muted">Your cart</span> <span
+							class="badge badge-secondary badge-pill"
+							th:text="${order.getItems().size()}">3</span>
+					</h4>
+					<ul class="list-group mb-3">
+						<li th:each="item: ${order.items}"
+							class="list-group-item d-flex justify-content-between lh-condensed">
+							<div>
+								<h6 class="my-0" th:text="${item.getProduct().getName()}">Product
+									name</h6>
+								<small class="text-muted"
+									th:text="'Quantity: ' + ${item.getQuantity()}">Brief
+									description</small>
+							</div> <span class="text-muted"
+							th:text="${item.getProduct().getPrice()} + ' $'">$12</span>
+						</li>
+						<li
+							class="list-group-item d-flex justify-content-between bg-light">
+							<div class="text-success">
+								<h6 class="my-0">Points Discount</h6>
+								<small>0 Points</small>
+							</div> <span class="text-success">-5 $</span>
+						</li>
+						<li class="list-group-item d-flex justify-content-between"><span>Total
+								(USD)</span> <strong th:text="${order.getTotalPrice()} + ' $'">$20</strong></li>
+					</ul>
+
+					<form class="card p-2">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Promo code">
+							<div class="input-group-append">
+								<button type="submit" class="btn btn-secondary">Redeem</button>
+							</div>
+						</div>
+					</form>
+
+					<br>
+					<div class="input-group">
+						<a class="btn btn-primary form-control" th:href="@{/placeOrder}">
+							Place Order </a>
+					</div>
+				</div>
+				<div class="col-md-8 order-md-1">
+					<h4 class="mb-3">Shipping Address</h4>
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="firstName">First name</label> <input type="text"
+								class="form-control" id="firstName"
+								style="background-color: #fff;" disabled
+								th:value="${buyer.getFirstName()}">
+						</div>
+						<div class="col-md-6 mb-3">
+							<label for="lastName">Last name</label> <input type="text"
+								class="form-control" id="lastName"
+								style="background-color: #fff;" disabled
+								th:value="${buyer.getLastName()}">
+						</div>
+					</div>
+
+					<div class="mb-3">
+						<label for="address">Address</label> <input type="text"
+							class="form-control" id="address" style="background-color: #fff;"
+							disabled th:value="${buyer.getAddress().getStreet()}">
+					</div>
+
+					<div class="row">
+						<div class="col-md-5 mb-3">
+							<label for="country">Country</label> <select
+								class="custom-select d-block w-100" id="country"
+								style="background-color: #fff;" disabled>
+								<option value="">Choose...</option>
+								<option>United States</option>
+							</select>
+						</div>
+						<div class="col-md-4 mb-3">
+							<label for="state">State</label> <select
+								class="custom-select d-block w-100" id="state"
+								style="background-color: #fff;" disabled>
+								<option value="">Choose...</option>
+								<option>California</option>
+							</select>
+						</div>
+						<div class="col-md-3 mb-3">
+							<label for="zip">Zip</label> <input type="text"
+								class="form-control" id="zip" style="background-color: #fff;"
+								disabled th:value="${buyer.getAddress().getZipCode()}">
+						</div>
+					</div>
+
+					<h4 class="mb-3">Payment</h4>
+					<div class="row">
+						<div class="col-md-6 mb-3">
+							<label for="cc-name">Name on card</label> <input type="text"
+								class="form-control" id="cc-name"
+								style="background-color: #fff;" disabled
+								th:value="${buyer.getPaymentMethod().getCardNumber()}">
+							<small class="text-muted">Full name as displayed on card</small>
+						</div>
+						<div class="col-md-6 mb-3">
+							<label for="cc-number">Credit card number</label> <input
+								type="text" class="form-control" id="cc-number"
+								style="background-color: #fff;" disabled
+								th:value="${buyer.getPaymentMethod().getCvv()}">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-3 mb-3">
+							<label for="cc-expiration">Expiration</label> <input type="text"
+								class="form-control" id="cc-expiration"
+								style="background-color: #fff;" disabled
+								th:value="${buyer.getPaymentMethod().getExpiryDate()}">
+						</div>
+						<div class="col-md-3 mb-3">
+							<label for="cc-expiration">CVV</label> <input type="text"
+								class="form-control" id="cc-cvv" style="background-color: #fff;"
+								disabled th:value="${buyer.getPaymentMethod().getNameOnCard()}">
+						</div>
+					</div>
+					<hr class="mb-4">
+					<div class="row" style="display: block; text-align: end;">
+						<a class="btn btn-primary" th:href="@{/placeOrder}"> Place
+							Order </a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
